# py-webrtcvad

./: .gitignore  CMakeLists.txt  README.rst  example.cpp
cbits/: CMakeLists.txt
cbits/webrtc/api/task_queue/: task_queue_base.h
cbits/webrtc/common_audio/: wav_file.cc  wav_file.h  wav_header.cc
cbits/webrtc/common_audio/include/: audio_util.h
cbits/webrtc/common_audio/signal_processing/: CMakeLists.txt
cbits/webrtc/common_audio/vad/: vad.cc
cbits/webrtc/common_audio/vad/include/: vad.h  webrtc_vad.h
cbits/webrtc/rtc_base/: critical_section.cc  critical_section.h  platform_thread.cc  platform_thread.h  platform_thread_types.cc  thread_checker.h
cbits/webrtc/rtc_base/numerics/: safe_conversions.h
cbits/webrtc/rtc_base/synchronization/: sequence_checker.h
cbits/webrtc/rtc_base/system/: file_wrapper.cc  file_wrapper.h
